# aven

./: .avenignore  .env.example  .gitignore  README.md  aven-contracts-reference.md  next.config.ts  package-lock.json  package.json  ref.html  skills-lock.json  tsconfig.json
contracts/contracts/stream_contract/: Cargo.toml  README.md
contracts/contracts/stream_contract/src/: lib.rs  test.rs
contracts/contracts/stream_contract/test_snapshots/test/: approved_session_releases_exact_reserved_amount.1.json  configured_verifier_blocks_legacy_requests.1.json  dispute_frees_capacity_and_pending_claim_blocks_cancel.1.json  final_release_rejects_outstanding_withdrawals.1.json  final_release_requires_exact_remaining_balance_and_explicit_approval.1.json  full_escrow_release_completes_stream.1.json  ledger_time_does_not_increase_available_or_measured_value.1.json  stream_creation_rejects_self_payment_and_keeps_legacy_fields_inert.1.json  test_cancel_pays_earned_to_recipient.1.json  test_cancel_returns_unstreamed.1.json  test_cancel_stream_refunds.1.json  test_checkpoint_auto_approve_timeout.1.json  test_create_stream_insufficient_deposit.1.json  test_create_stream_success.1.json  test_dispute_blocks_release_and_frees_reservation.1.json  test_exact_withdrawal_requires_approval_and_cannot_repeat.1.json  test_legacy_unreviewed_withdrawal_is_blocked.1.json  test_only_recipient_can_withdraw.1.json  test_only_sender_can_pause.1.json  test_overflow_protection.1.json  test_pause_resume.1.json  test_validation_rules.1.json  (+6 more)
cool/contracts/contracts/attestation_contract/: Cargo.toml
(+279 files in other folders)
