[package]
name = "stream_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[features]
testutils = ["soroban-sdk/testutils", "shared/testutils"]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
shared = { path = "../shared", features = ["testutils"] }
